[gd_scene load_steps=16 format=2]

[ext_resource path="res://Images/DaveFace.png" type="Texture" id=1]
[ext_resource path="res://Script/StatusBar/StatusBar.gd" type="Script" id=2]
[ext_resource path="res://Images/Text/daves.png" type="Texture" id=3]
[ext_resource path="res://Images/Text/score.png" type="Texture" id=4]
[ext_resource path="res://Images/Text/level.png" type="Texture" id=5]
[ext_resource path="res://Images/Text/door_enable_banner.png" type="Texture" id=6]
[ext_resource path="res://Prefabs/black.tscn" type="PackedScene" id=7]
[ext_resource path="res://Images/Text/jetpack.png" type="Texture" id=8]
[ext_resource path="res://Images/bar/jetpack_over.png" type="Texture" id=9]
[ext_resource path="res://Images/bar/jetpack_progress.png" type="Texture" id=10]
[ext_resource path="res://Images/gun/gun_icon.png" type="Texture" id=11]
[ext_resource path="res://Images/Text/gun.png" type="Texture" id=12]
[ext_resource path="res://Images/Text/thin.png" type="Texture" id=13]
[ext_resource path="res://Images/number/num0.png" type="Texture" id=14]
[ext_resource path="res://Prefabs/GameOver.tscn" type="PackedScene" id=15]

[node name="StatusBar" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Score" type="Sprite" parent="."]
position = Vector2( 65.6867, 16.4217 )
z_index = 999
texture = ExtResource( 4 )

[node name="Sprite1" type="Sprite" parent="Score"]
position = Vector2( 70.3133, -0.4217 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="Score"]
position = Vector2( 86.3133, -0.4217 )
texture = ExtResource( 14 )

[node name="Sprite3" type="Sprite" parent="Score"]
position = Vector2( 102.313, -0.4217 )
texture = ExtResource( 14 )

[node name="Sprite4" type="Sprite" parent="Score"]
position = Vector2( 118.313, -0.4217 )
texture = ExtResource( 14 )

[node name="Sprite5" type="Sprite" parent="Score"]
position = Vector2( 134.313, -0.4217 )
texture = ExtResource( 14 )

[node name="Level" type="Sprite" parent="."]
position = Vector2( 291.352, 17.4811 )
z_index = 999
texture = ExtResource( 5 )

[node name="Sprite1" type="Sprite" parent="Level"]
position = Vector2( 68.648, -1.4811 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="Level"]
position = Vector2( 84.648, -1.4811 )
texture = ExtResource( 14 )

[node name="Daves" type="Sprite" parent="."]
position = Vector2( 449.742, 17.4811 )
z_index = 999
texture = ExtResource( 3 )

[node name="DaveCount" type="TextureProgress" parent="Daves"]
margin_left = 52.0
margin_top = -13.0
margin_right = 217.0
margin_bottom = 19.0
rect_scale = Vector2( 0.838563, 0.800328 )
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorMessage" type="Sprite" parent="."]
position = Vector2( 317.697, 399.091 )
z_index = 999
texture = ExtResource( 6 )

[node name="black" parent="." instance=ExtResource( 7 )]
position = Vector2( 321.596, 387.153 )
scale = Vector2( 20.0985, 2.85549 )
z_index = 97

[node name="black2" parent="." instance=ExtResource( 7 )]
position = Vector2( 319.858, 17.7751 )
scale = Vector2( 20.1482, 1.22388 )
z_index = 97

[node name="JetpackNode" type="Node2D" parent="."]
position = Vector2( 127.402, 357.585 )
z_index = 999
__meta__ = {
"_edit_group_": true
}

[node name="Jetpack" type="TextureRect" parent="JetpackNode"]
margin_left = -72.0
margin_top = -13.1718
margin_right = 57.0
margin_bottom = 26.8282
rect_scale = Vector2( 0.8, 1 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JetpackCount" type="TextureProgress" parent="JetpackNode"]
margin_left = 52.668
margin_top = -7.52539
margin_right = 310.668
margin_bottom = 18.4746
max_value = 500.0
value = 500.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunNode" type="Node2D" parent="."]
visible = false
position = Vector2( 510.653, 347.231 )
z_index = 999
__meta__ = {
"_edit_group_": true
}

[node name="Gun" type="TextureRect" parent="GunNode"]
margin_right = 77.0
margin_bottom = 40.0
rect_scale = Vector2( 0.8, 1 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunIcon" type="TextureRect" parent="GunNode"]
margin_left = 77.0
margin_right = 117.0
margin_bottom = 40.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thin" type="Sprite" parent="."]
position = Vector2( 321, 339 )
z_index = 999
texture = ExtResource( 13 )

[node name="thin2" type="Sprite" parent="."]
position = Vector2( 321.51, 37.2234 )
z_index = 999
texture = ExtResource( 13 )

[node name="GameOver" parent="." instance=ExtResource( 15 )]
position = Vector2( 320, 192 )
